<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.homebrewersassistant.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu_sani"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu_ferm"
            android:onClick="StartSanitizingActivity"
            android:text="@string/sanitizing" />

        <Button
            android:id="@+id/menu_brewing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu_ferm"
            android:onClick="StartBrewingActivity"
            android:text="@string/brewing" />

        <Button
            android:id="@+id/menu_ferm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu_bottle"
            android:onClick="StartFermentationActivity"
            android:text="@string/fermentation" />

        <Button
            android:id="@+id/menu_bottle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu_drinking"
            android:layout_marginBottom="56dp"
            android:onClick="StartBottlingActivity"
            android:text="@string/bottling" />

        <Button
            android:id="@+id/menu_drinking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/menu_abv"
            android:onClick="StartDrinkingActivity"
            android:text="@string/drinking" />

        <Button
            android:id="@+id/menu_abv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menu_drinking"
            android:layout_gravity="bottom|center_horizontal"
            android:onClick="StartabvActivity"
            android:text="@string/ABV" />

    </LinearLayout>


</RelativeLayout>
