<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:touchscreenBlocksFocus="false"
    tools:context="com.example.android.homebrewersassistant.ABV">

    <TextView
        android:id="@+id/ABV_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/ABV"
        android:textColor="#3F51B5"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_abv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Ferm_Title"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Ferm_Title"
        android:text="@string/menu" />

    <EditText
        android:id="@+id/OG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/FG"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:hint="@string/OG" />

    <EditText
        android:id="@+id/FG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/OG"
        android:layout_alignStart="@+id/OG"
        android:layout_centerVertical="true"
        android:hint="@string/FG" />

    <TextView
        android:id="@+id/ABV_Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ABV_Title"
        android:layout_alignRight="@+id/ABV_Title"
        android:layout_below="@+id/FG"
        android:layout_marginTop="58dp"
        android:layout_toStartOf="@+id/Ferm_Title"
        android:text="@string/ABVFormula" />

</RelativeLayout>
