<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/Sanitizing_Image_View"
        android:src="@drawable/washyourhands"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sanitizing"
        android:id="@+id/Sanitizing_Title"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_below="@+id/Sanitizing_Image_View"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaniWarningText"
        android:id="@+id/Sanitizing_Detail_Text"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:layout_above="@+id/next_sani"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SanitizingText"
        android:id="@+id/Sanitizing_Text"
        android:textColor="#000000"
        android:layout_above="@+id/Sanitizing_Detail_Text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next_sani"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="ViewBrewing" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/back_sani"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="ViewMenu"
        android:nestedScrollingEnabled="true" />

</RelativeLayout>
