<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.homebrewersassistant.Brewing">

    <ImageView
        android:id="@+id/Hops_Image_View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hops" />

    <TextView
        android:id="@+id/Brew_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/BrewText"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/Brew_Text_Detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Brew_Text"
        android:layout_marginTop="27dp"
        android:text="@string/BrewTextDetail"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Brewing_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Hops_Image_View"
        android:layout_centerHorizontal="true"
        android:text="@string/brewing"
        android:textColor="#3F51B5"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="bold" />

    <Button
        android:id="@+id/next_brewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="StartFermentationActivity"
        android:text="@string/next" />

    <Button
        android:id="@+id/back_brewing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="StartMainActivity"
        android:text="@string/menu" />

</RelativeLayout>
