<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.homebrewersassistant.fermentation"
    android:touchscreenBlocksFocus="false">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/Fermenters_Image_View"
        android:src="@drawable/fermenters"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BrewText"
        android:id="@+id/Ferm_Text"
        android:textColor="#000000"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FermentationTextDetail"
        android:id="@+id/Ferm_Text_Detail"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:layout_below="@+id/Ferm_Text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fermentation"
        android:id="@+id/Ferm_Title"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_below="@+id/Fermenters_Image_View"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/next_fermentation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="VIewBottle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/back_fermentation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="ViewMenu"
        android:nestedScrollingEnabled="true" />

</RelativeLayout>
