<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.homebrewersassistant.Drinking">

    <ImageView
        android:id="@+id/Drinking_Image_View"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/drinking" />

    <TextView
        android:id="@+id/Drinking_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/DrinkingText"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/Drinking_Detail_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Drinking_Text"
        android:layout_marginTop="46dp"
        android:text="@string/DrinkingTextDetail"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Drinking_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Drinking_Image_View"
        android:layout_centerHorizontal="true"
        android:text="@string/drinking"
        android:textColor="#3F51B5"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_drinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Drinking_Title"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Drinking_Title"
        android:onClick="StartMainActivity"
        android:text="@string/menu" />

</RelativeLayout>
